[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
derive_more = "0.99.17"
defaultmap = { git = "https://github.com/danielhuang/defaultmap", branch = "hash-ord" }
petgraph = "0.6.0"
pathfinding = "3.0.5"
stringtools = { git = "https://github.com/danielhuang/stringtools" }
regex = "1.5.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
cached = "0.26.2"
lazy-regex = "2.2.2"
seahash = "4.1.0"
rustc-hash = "1.1.0"

[profile.dev]
opt-level = 2

[profile.release]
debug = true
overflow-checks = true
